--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconscout/unicons": "^4.0.8",
     "axios": "^1.6.7",
     "props": "^0.3.0",
     "react": "^18.2.0",
