--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "props": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.22.2",
     "react-scroll": "^1.9.0"
   },
