--- a/cra_client/package.json
+++ b/cra_client/package.json
@@ -2,6 +2,7 @@
   "name": "cra_client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://event-project.onrender.com/",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -15,6 +16,7 @@
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.1",
     "jwt-decode": "^4.0.0",
+    "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
