--- a/cra_client/package.json
+++ b/cra_client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
